auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d109d3bf",
+   "id": "d3f00445",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3cac7f",
+   "id": "92f656d0",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf533d10",
+   "id": "fc21a164",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0d1d8d",
+   "id": "e269df03",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706b1712",
+   "id": "bcc9d6f7",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e479f18",
+   "id": "ba7f0a81",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59d2f00f",
+   "id": "0b5dec5d",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1234597",
+   "id": "ae5becae",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -100,7 +100,7 @@
   }
  ],
  "metadata": {
-  "date": 1729509368.808025,
+  "date": 1731467713.3998013,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
