--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "522d627d",
+   "id": "17ba65f6",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72b17a14",
+   "id": "6e6d15ad",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "763d2696",
+   "id": "c5213a90",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd555793",
+   "id": "a820298e",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738fc7b3",
+   "id": "3af62be7",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd83ffd",
+   "id": "b1b5d187",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f70a5aaa",
+   "id": "fd7f8e25",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6eae27",
+   "id": "9b98134a",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca4b57a",
+   "id": "2e0b555f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769ae84e",
+   "id": "d6b5828a",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3186a8",
+   "id": "158c3b3a",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f752e21",
+   "id": "30b4b30b",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65eb61e",
+   "id": "620cc5ac",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d2fae4b",
+   "id": "8f791b50",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5634d956",
+   "id": "7f11f763",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5ab231e",
+   "id": "e0089fc6",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19fabe31",
+   "id": "5bf2c8ec",
    "metadata": {},
    "source": [
     "Let’s define a function to create an inventory model using the given parameters."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d5debb",
+   "id": "c596d3b4",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a68a5354",
+   "id": "74239203",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edcc616",
+   "id": "ca798236",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5acb27",
+   "id": "342bdcef",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961864b6",
+   "id": "c1517c58",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2ca4b4",
+   "id": "ee28f91d",
    "metadata": {
     "hide-output": false
    },
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f01192b",
+   "id": "3a6eee79",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12d84ea6",
+   "id": "58fcb6f3",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af3c395",
+   "id": "b0a3675a",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332d6db6",
+   "id": "4b619b3c",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "028fed21",
+   "id": "246c165a",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85ee9d2a",
+   "id": "743ca0e3",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe3b4db",
+   "id": "7fa6efae",
    "metadata": {
     "hide-output": false
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d3d455",
+   "id": "3941c118",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21657817",
+   "id": "e88fde9f",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f587ae1a",
+   "id": "f5c81a72",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ecf368e",
+   "id": "912da218",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "260fd793",
+   "id": "9563c7bc",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e0bba62",
+   "id": "6fbaa633",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97fb5b42",
+   "id": "0042371a",
    "metadata": {
     "hide-output": false
    },
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdce6a56",
+   "id": "4815a5eb",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2846d1a6",
+   "id": "da8bf85a",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b93f5b15",
+   "id": "7c568b9e",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19232c4c",
+   "id": "b12420a1",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab23a6e9",
+   "id": "2e3a1048",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37ca3373",
+   "id": "ad33a434",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2373f499",
+   "id": "2cc3629e",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate the compile time."
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd48663d",
+   "id": "e9a640bb",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e53c762",
+   "id": "aec904e8",
    "metadata": {},
    "source": [
     "Let’s verify that the Numba and JAX implementations converge to the same solution."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e24925",
+   "id": "a5bb73e1",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e5e4ab5",
+   "id": "7484c2aa",
    "metadata": {},
    "source": [
     "Here’s the speed comparison."
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eee25a7",
+   "id": "a11bbc0d",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   }
  ],
  "metadata": {
-  "date": 1729509368.8617477,
+  "date": 1731467713.457009,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
