--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bdbe096b",
+   "id": "4097f812",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f10f5ba",
+   "id": "bc654991",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8c3e5c",
+   "id": "3d7b9590",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498be827",
+   "id": "59a57290",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -80,7 +80,7 @@
   }
  ],
  "metadata": {
-  "date": 1729509369.3857121,
+  "date": 1731467714.013543,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
