--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2f29599",
+   "id": "749dcba0",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f71bf96",
+   "id": "b8051c76",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b7c83d",
+   "id": "761db055",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "909aba95",
+   "id": "adcc25f4",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d537193",
+   "id": "f2382a0a",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47075529",
+   "id": "8688e768",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "454dcc26",
+   "id": "85a0ab5e",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b262da67",
+   "id": "aeb0236c",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52280b3",
+   "id": "0774b8b2",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e150623a",
+   "id": "c2d8d20b",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1d5682",
+   "id": "67e1c164",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96b90a04",
+   "id": "ab5624ec",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a2107bb",
+   "id": "b51549be",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc6b4e4d",
+   "id": "6d808394",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bb14f5",
+   "id": "ca4394e0",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb52bf8",
+   "id": "a498aed1",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "876294ab",
+   "id": "113c94ef",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ba07e2",
+   "id": "6e8a3ec5",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a51d5b",
+   "id": "aa4c75a9",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8d9f97",
+   "id": "37e24fe3",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a158ea8",
+   "id": "15bda47b",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be2c86b2",
+   "id": "a157821a",
    "metadata": {
     "hide-output": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b92dd1",
+   "id": "2a2f7ec8",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd005871",
+   "id": "adf91042",
    "metadata": {
     "hide-output": false
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74516e31",
+   "id": "247bd05e",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a76ffd4",
+   "id": "2f26b12a",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b106973",
+   "id": "2d201337",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c91afc73",
+   "id": "434e7aa3",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0607ce8",
+   "id": "9c33fdfb",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb065e0b",
+   "id": "872f8553",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37b0e25",
+   "id": "c7c4f264",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8842ad0",
+   "id": "04aea0c0",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcff4a8b",
+   "id": "659aab1b",
    "metadata": {
     "hide-output": false
    },
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3715848",
+   "id": "0d897ea0",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25cb0b8c",
+   "id": "a5e66ddc",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431b755e",
+   "id": "1d766320",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500ecb51",
+   "id": "e71ee766",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8043337e",
+   "id": "61251fee",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef298a1",
+   "id": "7298b0a5",
    "metadata": {},
    "source": [
     "We run the code again to eliminate compile time."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10de02d2",
+   "id": "c2bf8283",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e142ef",
+   "id": "fe3d74f3",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ff81568",
+   "id": "c58baa39",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "381bd93d",
+   "id": "cd1cb0cb",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e91af2",
+   "id": "afdea885",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f652bd2",
+   "id": "dd41bd96",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b5b534",
+   "id": "ee12eddb",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3710be8e",
+   "id": "a51c59fd",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d4f0381",
+   "id": "48e9b4db",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d7f212e",
+   "id": "80439349",
    "metadata": {
     "hide-output": false
    },
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "819d3bb4",
+   "id": "079ac249",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d20a1841",
+   "id": "c9cd19be",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3051582",
+   "id": "2434e91a",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b177f5ba",
+   "id": "d22a2e37",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef0ae78e",
+   "id": "b7a6e9df",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75450b7b",
+   "id": "2fc221cc",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a016a8d",
+   "id": "59ba1048",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38fa5318",
+   "id": "3992c2e6",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0e1ecc2",
+   "id": "be1f8d6b",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   }
  ],
  "metadata": {
-  "date": 1729509368.8345387,
+  "date": 1731467713.428083,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
